--- a/PostgresSQLDemo.ipynb
+++ b/PostgresSQLDemo.ipynb
@@ -128,7 +128,7 @@
       "metadata": {
         "id": "y5N9bq3drr10"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -150,10 +150,32 @@
         "  --role=\"roles/cloudsql.client\"\n"
       ],
       "metadata": {
-        "id": "qfxVPLPJsnet"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qfxVPLPJsnet",
+        "outputId": "5403e4c4-69ee-4cee-9544-30e66a4db40f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Updated property [core/project].\n",
+            "Updated IAM policy for project [custom-vigil-328901].\n",
+            "bindings:\n",
+            "- members:\n",
+            "  - user:Peddireddy999@gmail.com\n",
+            "  role: roles/cloudsql.client\n",
+            "- members:\n",
+            "  - user:Peddireddy999@gmail.com\n",
+            "  role: roles/owner\n",
+            "etag: BwYTet1Zeu4=\n",
+            "version: 1\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
