--- a/CreateNodeObjects.ipynb
+++ b/CreateNodeObjects.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNGPU4xePjr743ZCXkTyveu",
+      "authorship_tag": "ABX9TyNPCjqJDX4KR4OS1Vk7qqEv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -69,6 +69,18 @@
       ],
       "metadata": {
         "id": "Yb1-FN5ZwFDq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# https://cloud.google.com/sql/docs/postgres/connect-overview\n",
+        "# postgresql+pg8000://<db_user>:<db_pass>@<db_host>:<db_port>/<db_name>\n"
+      ],
+      "metadata": {
+        "id": "619_CMNeHOEQ"
       },
       "execution_count": null,
       "outputs": []
