--- a/Notes_RAG.ipynb
+++ b/Notes_RAG.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP4Y/+oTwFEouMBKkVdNOEE",
+      "authorship_tag": "ABX9TyPu/v7OpB5xX4/ykMsJ7jbV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,6 +34,20 @@
       },
       "outputs": [],
       "source": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**LlamaIndex**\n",
+        "\n",
+        "https://nanonets.com/blog/llamaindex/#using-index-to-query-data\n",
+        "\n",
+        "\n",
+        "https://www.leewayhertz.com/llamaindex/\n"
+      ],
+      "metadata": {
+        "id": "OepBDDFIHtX6"
+      }
     },
     {
       "cell_type": "markdown",
