--- a/AdvancedRAGTechniques.ipynb
+++ b/AdvancedRAGTechniques.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM8Bh4QJFhvIZXMB7t5GfCv",
+      "authorship_tag": "ABX9TyPlpXCZyMIkdqWywKX5tXF2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,6 +34,140 @@
       },
       "outputs": [],
       "source": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Report Name\tAssumed Performance Advances\n",
+        "Report Description:\tThe purpose of this report is to show assumed performance advances for all sellers that have been paid along with the recoveries that have occurred.\n",
+        "\n",
+        "Report Name\tAttainment % Outlier Analysis Report\n",
+        "Report Description:\tThis report will show trending of Attainment % YOY as well as Attainment % against universes (Business Unit, Segment, Sales Center, Abstract) in order to find any payment anomalies. This will include Z-scores that are graded against their specific universe.\n",
+        "\n",
+        "\n",
+        "Report Name\tCommission Adjustment Report\n",
+        "Report Description:\tDetails of all adjustments to commissions throughout the year by seller\n",
+        "\n",
+        "\n",
+        "Report Name\tCommission Exceeding Plan Year Cap\n",
+        "Report Description:\tShows all sellers whose commissions exceeds the Plan Year Cap, this report is used by finance to analyze the people who are hitting their cap\n",
+        "\n",
+        "Report Name\tCommission Limiter Report\n",
+        "Report Description:\tDisplays a breakdown of commission limiter sets for sellers who have a Production component. This is the max amount of commissions they may receive for the shown period.\n",
+        "\n",
+        "Report Name\tCommissions Hold Report\n",
+        "Report Description:\tAny Commissions that were earned but not paid will appear on this report. This will include manually held commissions or comissions held by a lack of DOU.\n",
+        "\n",
+        "Report Name\tComp Analysis (View)\n",
+        "Report Description:\tThis report helps the Finance Team with their analysis of pay. It is ingested into systems for their analysis.\n",
+        "\n",
+        "Report Name\tComp Status Event Overrides (View)\n",
+        "Report Description:\tThe report displays any instances where a Comp Status has been manually deleted year-to-date. Data can come in incorrect from feeds and this is where the information would show that they corrected it.\n",
+        "\n",
+        "Report Name\tDeficit Report (View)\n",
+        "Report Description:\tThis report shows all deficits for analysis as well as off comp-deficits to transfer to payroll for payment recovery.\n",
+        "\n",
+        "Report Name\tEarnings Outlier Analysis Report\n",
+        "Report Description:\tThis report will show trending of Earnings YOY as well as Earnings against universes (Business Unit, Segment, Sales Center, Abstract) in order to find any payment anomalies. This will include their z-score against their universes.\n",
+        "\n",
+        "Report Name\tEmployee Closeout Report\n",
+        "Report Description:\tTo provide visibility into what employee closeouts need to be checked for in Varicent\n",
+        "\n",
+        "Report Name\tFlat Payment Report\n",
+        "Report Description:\tProvide visibility into which sellers have flat payments during which months. If the flat payments are able to be tied to a measure, they will show here, otherwise there will be no measure information.\n",
+        "\n",
+        "Report Name\tHeadcount Analysis Detail (View)\n",
+        "Report Description:\t\"This report provides a total headcount by title and by month at a Nation (or Global) level.\n",
+        "This report is used by Plan design to do analysis and determine how many employees will be impacted by any changes they will make in the system.\"\n",
+        "\n",
+        "Report Name\tLevel Based Metrics Payment Report (View)\n",
+        "Report Description:\tThis report displays the Category, Metrics Rating and Payment details by employee. This helps provide an analysis point for the Comp Admin team to see which plans are being paid in what way.\n",
+        "\n",
+        "Report Name\tMetrics and Milestones Rating Report\n",
+        "Report Description:\tThis report displays the Category and Metrics Rating details by Abstract and Sales Center so the teams can analyze if a metric is being measured correctly.\n",
+        "\n",
+        "Report Name\tMOM Trending Report (Annual) (view)\n",
+        "Report Description:\tThis report will show trending of pay MOM for components with annual quotas in order to find any payment anomalies.\n",
+        "\n",
+        "Report Name\tMOM Trending Report (Monthly) (view)\n",
+        "Report Description:\tThis report will show trending of pay MOM for measures with a monthly quota in order to find any payment anomalies. This will also include the attainment of the different universes the employee is in (Business unit, Segment, Sales center) as a whole and their difference from the universe.\n",
+        "\n",
+        "Report Name\tNo Signed DOU Report\n",
+        "Report Description:\tTo show a list of all sellers who haven't signed a DOU and their information for analysis\n",
+        "\n",
+        "Report Name\tOther Production Detail Report\n",
+        "Report Description:\tThis report will show details of any production results that are not included in our other transaction reports. We'll need to make this accessible to sellers to see information on their metrics and what the results look like.\n",
+        "\n",
+        "Report Name\tOther Production Summary\n",
+        "Report\tReport Description:\tThis report will show a summary of any production results that are not included in other transactional reports.\n",
+        "\n",
+        "Report Name\tParental Leave Report\n",
+        "Report Description:\tTo show how parental leave affects quota for measures within respective earn buckets for all sellers who are marked as on Parental Leave. This report will only show measures that are eligible for PPL.\n",
+        "\n",
+        "Report Name\tPay Tape Report\n",
+        "Report Description:\tShow EOW Check and Special Check payment amount for the month\n",
+        "\n",
+        "Report Name\tPayment Review Report\n",
+        "Report Description:\t\"Showcase any larger than ordinary payments that need to be reviewed\n",
+        "Showcase any large incentive payments that need reviewing\"\n",
+        "\n",
+        "Report Name\tPayroll Deficit Report\n",
+        "Report Description:\tTo see all adjustments made to the DTTP code, includes US sellers clearing their balance at EOY, clearing negative balances, terminations, transfer out of sales activity.\n",
+        "\n",
+        "Report Name\tPayroll Security (View)\n",
+        "Report Description:\tThis view will provide insight into anyone who is an role other than seller who is currently receiving pay from commissions.\n",
+        "\n",
+        "Report Name\tProduction Attainment Detail Report\n",
+        "Report Description:\tTo show where the production results and adjustments are coming from at a seller level for analysis\n",
+        "\n",
+        "Report Name\tProduction Results View\tReport Description:\tThis report will show a breakdown of all results received for production measure by sellers. It should include any adjustments that have been made to measure manually as well. It will help analyze where results are coming from.\n",
+        "\n",
+        "Report Name\tProduction Sales YTD\n",
+        "Report Description:\tThis report will be used to research production sales at a SIP level. It includes 1 line per SIP and all sellers are concatenated and separated by their title groups.\n",
+        "\n",
+        "Report Name\tProduction Sales YTD - Reviewer\tReport Description:\tThis report will be used to research production sales at a SIP level. It will include 1 row per SIP so that the information can be researched by sale. It will also include reviewing information for the Comp Admin team to review. This report will show YTD SIP information for the EOW Months listed.\n",
+        "\n",
+        "Report Name\tProduction Sales YTD by Employee\n",
+        "Report Description:\tThis report will be used to research production sales at a SIP level. It will include 1 row per SIP per employee so that the information can be researched by seller.\n",
+        "\n",
+        "Report Name\tProduction Sales YTD by Employee - Reviewer\n",
+        "Report Description:\tThis report will be used to research production sales at a SIP level. It will include 1 row per SIP per employee so that the information can be researched by seller. It will also include reviewing information for the Comp Admin team to review.\n",
+        "\n",
+        "Report Name\tQuota Tool TBR Import Error Report (View)\n",
+        "Report Description:\tThis report displays records not processed from the QuotaToolTBR feed due to incorrect data received from the feed or Eligibility errors\n",
+        "\n",
+        "Report Name\tQuota Tool TBR Imported Records (View)\n",
+        "Report Description:\tThe report displays all records successfully processed from the QuotaToolTBR feed.\n",
+        "\n",
+        "Report Name\tSales Center\n",
+        "Report Bucket Total SIP Results (View)\tReport Description:\tThis report includes monthly SIP results totals along with a YTD sum by Report Bucket and Sales Center. It will help perform analysis on SIP results.\n",
+        "\n",
+        "Report Name\tSales Centers (View)\n",
+        "Report Description:\tDisplays the associated Segment, Admin Group and Sales Center Name for the plan year. This will assist Comp Admin with 3\n",
+        "knowing what codes to load for the Sales Center Assignment table.\n",
+        "\n",
+        "Report Name\tSales For Same Customer In Multiple Sales Centers (View)\n",
+        "Report Description:\tThis report will show all SIP sales for customers that are in multiple sales centers.\n",
+        "\n",
+        "Report Name\tSales Metrics and Customer Experience Employee View\n",
+        "Report Description:\tThis report displays the Category, Metrics Rating and Payment details by employee so that you can find any employees missing a rating or what a specific employee was rated at a specific time for a specific period.\n",
+        "\n",
+        "\n",
+        "Report Name\tSC Rollup (Service Eligibility)\n",
+        "Report Description:\tThis report would show the presorted set of results by Sales Center and Report Bucket available for drilldown\n",
+        "\n",
+        "Report Name\tSC Rollup (Assignment)\n",
+        "Report Description:\tThis report would show the presorted set of results by Sales Center and Report Bucket available for drilldown\n",
+        "\n",
+        "Report Name\tSIP Eligibility Errors\n",
+        "Report Description:\tThis report will show SIP crediting errors for all participants including Service Error (seller's abstract was not eligible for the service), Comp % Error (seller had 0% On Comp), Split % Error (Split % of all sellers on 1 Title Group exceeded 100% Split Percent)\n",
+        "\n",
+        "Report Name\tSIP High Production Attainment and Large Incentive Payment (View)\n",
+        "Report Description:\tThis report will help Comp Admin run audits on any large incentive payments or high production attainment SIPs for employees. They will need to filter this down for the information they want to see with regards to high attainment and large incentive payments."
+      ],
+      "metadata": {
+        "id": "KssUrogrID3z"
+      }
     },
     {
       "cell_type": "markdown",
